--- a/_posts/2019-11-16-fuzz.markdown
+++ b/_posts/2019-11-16-fuzz.markdown
@@ -19,30 +19,30 @@ to armored archosauromorphs like *Doswellia*:
 But which dinosaurs (and archosauromorphs) actually had fluff?  Which ones _definitely_ had fluff, and which are more speculative?  And which ones were definitely scaly?  In this post, I’ll go over the main candidates for fluff, what type of fluff to expect, and how we know what we know.
 
 ### Concepts
-There are two main concepts that are important to the discussion of paleo integument (the outermost layer of an animal, i.e. its skin, fur, feathers, scales, osteoderms, etc): thermoregulation and phylogenetic bracketing.  I'll describe both in detail before we jump into individual examples.
+There are two main concepts that are important to the discussion of paleo **integument** (the outermost layer of an animal, i.e. its skin, fur, feathers, scales, osteoderms, etc): thermoregulation and phylogenetic bracketing.  I'll describe both in detail before we jump into individual examples.
 
 #### Thermoregulation: Why be fluffy?
 Many mammals are fluffy.  Most birds are fluffy.  Lizards, crocodilians, fish, and naked mole rats are not fluffy.  What’s the correlation here?  Thermoregulation.  Fluffy creatures are **endothermic** (warm-blooded), keeping their core temperature elevated relative to the environment all the time.  Fluff helps them keep the heat in, preventing them from losing too much energy to the environment.  As an endothermic animal gets bigger, the [square-cube law](https://en.wikipedia.org/wiki/Square%E2%80%93cube_law) means that they don’t need as much insulation to stay warm, and may even lose their integument almost entirely over a certain size threshold when they get _too_ warm.  This is why elephants, rhinos, and hippos are mostly hairless--they run very warm and a thick fur coat would cause them to fatally overheat.
 
-On the flip side, **ectothermic** animals tend to be naked.  These animals allow their core temperature to fluctuate with the environment, and tend to be able to be more active when warm.  For them, fluff would keep heat _out_!  And yes, naked mole rats are actually cold-blooded, a rare example among mammals.
+On the flip side, **ectothermic** animals tend to be naked.  These animals allow their core temperature to fluctuate with the environment, and are able to be more active when warm.  For them, fluff would keep heat _out_!  And yes, naked mole rats are actually cold-blooded, a rare example among mammals.
 
 So, if you know a fossil animal was endothermic and smaller than a rhino, there is a good chance it had some kind of insulating coat.  (We can sometimes tell if an animal is endo- or ectothermic based on its **bone histology**, or bone growth rings, without having directly preserved evidence for fluff.)
 
 #### Note: Why are humans hairless?
 This is actually still a matter of some debate, but these are the main theories:
-- Humans evolved in hot conditions with a lot of direct sunlight exposure, namely the African savanna.  Since we walk upright (why we do that is another story), having head-hair protects us from the (vertically-shining) sunlight, and having minimal body hair allows us to be cooled more effectively by the (horizontally-blowing) wind.  Armpit and pubic hair were retained to help us to be smellier (no kidding--the smells involved are thought to be pheromones related to sex).
+- Humans evolved in hot conditions with a lot of direct sunlight exposure, namely the African savanna.  Since we walk upright (why we do that is another story), having head-hair protects us from the vertically-shining sunlight, and having minimal body hair allows us to be cooled more effectively by the horizontally-blowing wind.  Armpit and pubic hair were retained to help us to be smellier (no kidding--the smells involved are thought to be pheromones related to sex).
 - It’s a display / sexual selection thing, like a peacock’s tail, which serves no function other than to be sexy.  Clear, smooth skin is associated with good health, so maybe it makes sense that being able to see it better is more attractive.
 - Hair is a breeding ground for lice and other ectoparasites.  While this is true, other animals just live with their ectoparasites, so it doesn’t make much sense why humans should be special in jettisoning their hair.
 
 #### Phylogenetic Bracketing: Who is capable of growing fluff?
-To answer this question, we will use the principle of **phylogenetic bracketing**.  That means that if two animals on different branches of the tree of life are known to have a trait, then all animals in between them on the tree are also candidates for this trait.  This is because it’s likely that the last common ancestor of the two probably had the trait, which means that all of its other descendents could have it too.
+To answer this question, we will use the principle of **phylogenetic bracketing**.  That means that if two animals on different branches of the tree of life are known to have a trait, then all animals in between them on the tree are also candidates for this trait.  This is because it’s likely that the last common ancestor of the two probably had the trait, which means that all of its other descendants could have it too.
 
-For example, let’s say your dad’s cousin’s kid (your first cousin once removed) has ear hair.  And your dad’s brother’s kid (your first cousin) also has ear hair.  There’s a good chance the two of them got their ear hair from the same place, the last common ancestor they shared, which is your great-grandfather.  That means that you (and all your great-grandfather’s other descendents) also probably have the gene for ear hair, even if you don’t show it (only men can have ear hair, but that’s another story).
+For example, let’s say your dad’s cousin’s kid (your first cousin once removed) has violet eyes.  And your dad’s brother’s kid (your first cousin) also has violet eyes.  There’s a good chance the two of them got their violet eyes from the same place, the last common ancestor they shared, which is your great-grandfather.  That means that you (and all your great-grandfather’s other descendants) also probably have the gene for violet eyes, even if you don’t show it.
 
-So who are our distant fluffy cousins in the case of archosaurs?  Well, we have fossilized fuzz from pterosaurs, and birds are clearly fluffy.  That means that phylogenetically, everything in between, which includes all dinosaurs, were capable of producing fluff.  Then why don’t we see art of fluffy *Stegosaurus* or *Triceratops*?  Well, not everyone who _could_ produce protofeathers actually _did_.  Now that we’ve covered the main concepts surrounding paleo fuzz, let’s dive into specific examples.
+So who are the distant fluffy cousins in the case of archosaurs?  Well, we have fossilized fuzz from pterosaurs, and birds are clearly fluffy.  That means that phylogenetically, everything in between, which includes all dinosaurs, was capable of producing fluff.  Then why don’t we see art of fluffy *Stegosaurus* or *Triceratops*?  Well, not everyone who _could_ produce protofeathers actually _did_.  Now that we’ve covered the main concepts surrounding paleo fuzz, let’s dive into specific examples.
 
 ### Triassic Archosauromorphs
-Our story begins way back in the days before the dinosaurs, shortly after the Great Dying, when the reptile family tree was still sorting itself out into the clades we’re familiar with today.  New [research](https://www.researchgate.net/publication/332796952_Bone_histology_of_Azendohsaurus_laaroussii_Implications_for_the_evolution_of_thermometabolism_in_Archosauromorpha) from May of 2019 shows that some of the very earliest archosauromorphs closest to the base of the **archosaur** (birds, crocs, and dinosaurs) family tree were very much endothermic.  Since the earliest ancestors were warm-blooded, we can infer that this was the ancestral condition, and that means the cold-blooded crocodilians of today became ectothermic **secondarily**--that is, they evolved from warm-blooded ancestors.  And since these early archosauromorphs were warm-blooded, at least the small ones probably had some kind of insulating coat.
+Our story begins way back in the days before the dinosaurs, shortly after the Great Dying, when the reptile family was still sorting itself into the clades we’re familiar with today.  New [research](https://www.researchgate.net/publication/332796952_Bone_histology_of_Azendohsaurus_laaroussii_Implications_for_the_evolution_of_thermometabolism_in_Archosauromorpha) from May of 2019 shows that some of the earliest archosauromorphs closest to the base of the **archosaur** (birds, crocs, and dinosaurs) family tree were very much endothermic.  Since the earliest ancestors were warm-blooded, we can infer that this was the ancestral condition, and that means the cold-blooded crocodilians of today became ectothermic **secondarily**--that is, they evolved from warm-blooded ancestors.  And since these early archosauromorphs were warm-blooded, at least the small ones probably had some kind of insulating coat.
 
 ![fuzz-2.5](/assets/images/posts/fuzz-2.5.jpg)
 
@@ -50,7 +50,7 @@ Above: *Euparkeria*, a small archosauriform from Middle Triassic South Africa, r
 
 ![fuzz-2](/assets/images/posts/fuzz-2.jpg)
 
-Above: *Teraterpeton*, a small archosauromorph from Late Triassic Canada.  It looks super bird-like in this depiction, but its body plan was more like that of a lizard, with four sprawling limbs and long, clawed toes.
+Above: *Teraterpeton*, a small archosauromorph from Late Triassic Canada.  It looks super birdlike in this depiction, but its body plan was more like that of a lizard, with four sprawling limbs and long, clawed toes.
 
 So, when drawing Triassic archosauromorphs, it’s reasonable to depict a good amount of fuzz, especially when the creature is small.  However, no direct fossilized fuzz has been found in these groups, so if you don’t like how it looks, you could argue your case.  Also, note that primitive archosauromorph fluff is not feathers--only dinosaurs are known to have complex, branching feathers, but for archosauromorphs simple filaments (called protofeathers) are fair game.
 
@@ -70,10 +70,10 @@ Though pycnofibres weren’t as complex in shape as true feathers, new [research
 #### What about giant pterosaurs?
 The evidence shows that pterosaurs were ancestrally fluffy and endothermic, but is there a case to be made that giant pterosaurs secondarily could have lost their fluff?  Actually, probably not.  *Quetzalcoatlus northropi*, the largest known pterosaur, weighed something like 200 kg (440 lbs), which is extremely large for a flying creature, but not that large compared to other animals known to be very fluffy.  For example, a grizzly bear, which has thick fur even in the summer, can get up to 360 kg, so it’s unlikely that *Quetzalcoatlus*, with its huge membranous wing surfaces, would have faced problems with overheating.  In addition, Quetzalcoatlus is estimated to have flown at altitudes up to 4.6 km (15,000 feet) where it would have experienced sub-freezing temperatures.
 
-In conclusion, pterosaurs should always be restored with a full coat of pycnofibres.  Totally naked pterosaurs like the ones in Jurassic Park are frankly unacceptable (though that’s not even the worst problem with that depiction--see my [post](http://obscuredinosaurfacts.com/blog/post/2019/09/25/portrayals.html) about media portrayals of prehistoric animals).
+In conclusion, pterosaurs should *always* be restored with a full coat of pycnofibres.  Totally naked pterosaurs like the ones in Jurassic Park are frankly unacceptable (though that’s not even the worst problem with that depiction--see my [post](http://obscuredinosaurfacts.com/blog/post/2019/09/25/portrayals.html) about media portrayals of prehistoric animals).
 
 ### Dinosaurs
-Before the discovery of *Tianyulong* in 2009 *Kulindadromeus* in 2014, two small ornithischians (the opposite side of the [dinosaur family tree](http://obscuredinosaurfacts.com/blog/post/2019/09/11/dinosaur-family-overview.html) than birds), it was thought that only coelurosaurs (the group containing tyrannosaurs, birds, and everything in between) had feathers.  However, *Kulindadromeus*’s extensive coat, which includes complex branching feathers, coupled with its very distant position on the dinosaur family tree compared to coelurosaurs, means that phylogenetically, _basically any dinosaur is fair game for feathering_.  There are a few fossils that directly preserve scales, such as *Carnotaurus*, various sauropods, *Edmontosaurus*, etc, but since all of these fall between *Kulindadromeus* and birds on the family tree, we know that they all must have secondarily lost their fluff.
+Before the discovery of *Tianyulong* in 2009 [*Kulindadromeus*](https://obscuredinosaurfacts.com/profile/2020/08/02/kulinda.html) in 2014, two small ornithischians (the opposite side of the [dinosaur family tree](http://obscuredinosaurfacts.com/blog/post/2019/09/11/dinosaur-family-overview.html) than birds), it was thought that only coelurosaurs (the group containing tyrannosaurs, birds, and everything in between) had feathers.  However, *Kulindadromeus*’s extensive coat, which includes complex feather structures, coupled with its very distant position on the dinosaur family tree compared to coelurosaurs, means that phylogenetically, _basically any dinosaur is fair game for feathering_.  There are a few fossils that directly preserve scales, such as *Carnotaurus*, various sauropods, *Edmontosaurus*, etc, but since all of these fall between *Kulindadromeus* and birds on the family tree, we know that they all must have secondarily lost their fluff.
 
 Here is a chart summarizing the known and theorized integuments for ornithodirans:
 
@@ -85,10 +85,10 @@ However, even though all dinosaurs have the phylogenetic possibility of having f
 
 Above: *Yutyrannus* (meaning “feathered tyrant”), weighing up to 1.4 tonnes, is the largest dinosaur we’ve found that has directly preserved feathers.
 
-\* In addition to thermal evidence that *Tyrannosaurus* should probably be scaly, we now have directly preserved skin impressions of scales.
+\* In addition to thermal evidence that *Tyrannosaurus* should probably be scaly, we now have directly preserved [skin impressions of scales](https://royalsocietypublishing.org/doi/full/10.1098/rsbl.2017.0092).
 
 #### So what dinosaurs were _for sure_ fluffy, and what’s just speculation?
-The chart above does a pretty good job of showing all the directly-known, phylogenetically important feathered dinosaurs: *Psittacosaurus* and *Tianyulong* had quills; *Beipiaosaurus* and *Shuvuuia* had filaments; and *Ornithomimus* and *Kulindadromeus* had complex feathers.  There are many other maniraptoriformes (node 4 in the chart) that have been found with beautifully preserved feathers, such as *Zhenyuanlong*, *Microraptor*, and *Caihong*, that sometimes even show what color they were in life (see my [post](http://obscuredinosaurfacts.com/blog/post/2019/09/14/what-color-were-dinosaurs.html) on dinosaur coloration).  There are also many examples of non-maniraptoran coelurosaurs with protofeathers, such as *Dilong* and *Yutyrannus* (tyrannosauroids), and *Sinosauropteryx* (a compsognathid).  Here, I’ll go over a few examples speculative featheriness and how likely they actually are.
+The chart above does a pretty good job of showing all the directly-known, phylogenetically important feathered dinosaurs: *Psittacosaurus* and *Tianyulong* had quills; *Beipiaosaurus* and *Shuvuuia* had filaments; and *Ornithomimus* and *Kulindadromeus* had complex feathers.  There are many other maniraptoriformes (node 4 in the chart) that have been found with beautifully preserved feathers, such as *Zhenyuanlong*, *Microraptor*, and *Caihong*, that sometimes even show what [color](http://obscuredinosaurfacts.com/blog/post/2019/09/14/what-color-were-dinosaurs.html) they were in life.  There are also many examples of non-maniraptoran coelurosaurs with protofeathers, such as *Dilong* and *Yutyrannus* (tyrannosauroids), and *Sinosauropteryx* (a compsognathid).  Here, I’ll go over a few examples speculative featheriness and how likely they actually are.
 
 ![fuzz-5](/assets/images/posts/fuzz-5.png)
 
@@ -101,7 +101,7 @@ Above: *Plateosaurus*, a prosauropod (ancestral cousin to the later, giant, long
 
 ![fig-2.3](/assets/images/posts/family-overview-2.3.jpg)
 
-Above: a more likely, mostly-naked, sparsely-filamented reconstruction of *Plateosaurus*.  Sparse filaments like this (and like those found on elephants) actually help with heat dissipation by providing increased surface area like radiator fins--up to 10% more heat dissipation than a completely bald animal, according to one bit of [research](https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0047018).  I’d give this depiction better than 50% likelihood.
+Above: a more likely, mostly-naked, sparsely-filamented reconstruction of *Plateosaurus*.  Sparse filaments like this (and like those found on elephants) actually help with heat dissipation by providing increased surface area like radiator fins--up to 10% more heat dissipation than a completely bald animal, according to one bit of [research](https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0047018).  I’d bet on this depiction.
 
 #### *Therizinosaurus*
 ![fuzz-8](/assets/images/posts/fuzz-8.png)
@@ -114,7 +114,7 @@ Above: A nearly naked *Therizinosaurus*.  I'd say this depiction is more likely 
 
 ![fuzz-10](/assets/images/posts/fuzz-10.jpg)
 
-Above: A half-naked *Therizinosaurus*, again in the manner of ostriches.  I’d give this depiction better than 50% likelihood.
+Above: A half-naked *Therizinosaurus*, again in the manner of ostriches.  I’d bet on this depiction.
 
 #### Irritator
 ![fuzz-11](/assets/images/posts/fuzz-11.jpg)
@@ -123,7 +123,7 @@ Above: *Irritator*, a spinosaurid from late Early Cretaceous Brazil, here shown 
 
 ![fuzz-12](/assets/images/posts/fuzz-12.jpg)
 
-Above: A rather unusual interpretation of *Irritator* with a thick coat of protofeathers covering everything except the belly, hands, feet, neck, and snout.  Which of these depictions is more likely?  Well, *Irritator* was one of the smallest spinosaurids, at only 1 tonne, putting it under the *Yutyrannus* threshold, meaning that a full coat of protofeathers won’t cause it to fatally overheat.  It was probably semi-aquatic, in which case one could argue that protofeathers are a bad idea--but then again, otters, cormorants, and penguins all sport thick coats even as they dive to depths of several meters.  And phylogenetically, *Irritator* is a tetanuran, which, according to the chart above, have around a 60% chance of filaments.  So, in this case, I’d say that the fluffy *Irritator* is actually not unlikely, with a probability of between 30 and 60 percent.  I’d give naked *Irritator* a similar spread--since it lived in a tropical climate and is close to the *Yutyrannus* threshold, it’s kind of a borderline case.  If I were to illustrate *Irritator*, I think I would go with a middle ground of some areas of display filaments on the arms, tail, and head, but an otherwise mostly scaly body.
+Above: A rather unusual interpretation of *Irritator* with a thick coat of protofeathers covering everything except the belly, hands, feet, neck, and snout.  Which of these depictions is more likely?  Well, *Irritator* was one of the smallest spinosaurids, at only 1 tonne, putting it under the *Yutyrannus* threshold, meaning that a full coat of protofeathers won’t cause it to fatally overheat.  It was probably semi-aquatic, in which case one could argue that protofeathers are a bad idea--but then again, otters, cormorants, and penguins all sport thick coats even as they dive to depths of several meters.  And phylogenetically, *Irritator* is a tetanuran, which, according to the chart above, have around a 60% chance of filaments.  So, in this case, I’d say that the fluffy *Irritator* is actually not unlikely.  I’d give naked *Irritator* a similar spread--since it lived in a tropical climate and is close to the *Yutyrannus* threshold, it’s kind of a borderline case.  If I were to illustrate *Irritator*, I think I would go with a middle ground of some areas of display filaments on the arms, tail, and head, but an otherwise mostly scaly body. (Update: I lied.  [Fluffy *Irritator*](https://obscuredinosaurfacts.com/blog/post/2020/03/23/alphabestiary.html) was too much fun to pass up.)
 
 #### *Heterodontosaurus*
 ![fuzz-13](/assets/images/posts/fuzz-13.jpg)
@@ -151,24 +151,26 @@ Modern birds have five different types of feathers, called Stage 1 through Stage
 
 Stage 1 is a simple filament, which is probably ancestral to all archosaurs.  That means basically any archosaur under the *Yutyrannus* threshold is fair game for sporting these.  Stage 2 is a fiber bundle, such as the down feathers found in a pillow.  Stage 3 is a simple branched feather.  These are known from within Maniraptoriformes--anything more birdlike than *Sinosauropteryx*, which is known not to have anything more complex than Stage 2.  Stage 4 has the feather barbs branching further and sporting barbules, which allow the feather to zipper itself together into a single surface, and Stage 5 is a fully-developed flight feather with an asymmetric leading edge and a smooth texture.  Only pennaraptorans (oviraptorosaurs and more birdlike) have Stage 4 and 5 feathers, and probably only flighted paravians would have had Stage 5.  From fossilized skin impressions (outlined in Mark Witton's chart above), we know that true sauropods and the ceratosaur *Carnotaurus* had secondarily lost their fuzz, so for creatures nearby these on the family tree, feather with extreme caution.
 
-Ornithischians, having inherited the basal filament-producing ability, went on to develop specialized structures not covered in Stages 1-5.  *Kulindadromeus* had two types of unusual feathers alongside Stage 1 filaments: scales with filaments attached to them, and bundles of ribbonlike parallel filaments.  However, since ornithischians have no modern descendents, we don't know what other types of integument are possible.  As more discoveries are made, we will doubtless find additional unfamiliar fuzz structures preserved.
+Ornithischians, having inherited the basal filament-producing ability, went on to develop specialized structures not covered in Stages 1-5.  *Kulindadromeus* had two types of unusual feathers alongside Stage 1 filaments: scales with filaments attached to them, and bundles of ribbonlike parallel filaments.  However, since ornithischians have no modern descendants, we don't know what other types of integument are possible.  As more discoveries are made, we will doubtless find additional unfamiliar fuzz structures preserved.
 
 Further reading:
+
 [Paleobirding #1](https://theyoungbirdersodyssey.weebly.com/main-blog/paleobirding-1-which-groups-of-dinosaurs-had-feathers)
-[Should we make Plateosaurus fluffy?](http://markwitton-com.blogspot.com/2016/11/the-blog-post-where-i-ask-myself-should.html)
+
+[Should we make *Plateosaurus* fluffy?](http://markwitton-com.blogspot.com/2016/11/the-blog-post-where-i-ask-myself-should.html)
 
 ### Updates
 Putting my artistic money where my mouth is, here are a couple unusual takes on dinosaur integument.
 
 ![microceratus](/assets/images/posts/microceratus.jpg)
 
-Above: a fluffy take on *Microceratus*, a small bipedal basal ceratopsian from Late Cretaceous Mongolia.  It was one of the smallest ceratopsians, at about 2 feet long and 10-20 pounds--the size of a cat.  Being so small and endothermic, I thought it could use a bit of warm fluff.  I decided not to give it any tail quills--giving any and all ceratopsians quills has been a paleoart meme since the discovery of *Psittacosaurus*’s quills--for the same reason as mentioned above regarding *Heterodontosaurus*.
+Above: a fluffy take on *Microceratus*, a small bipedal basal ceratopsian from Late Cretaceous Mongolia.  It was one of the smallest ceratopsians, at about 2 feet long and 10-20 pounds--the size of a cat.  Being so small and endothermic, I thought it could use a bit of warm fluff.  I decided not to give it any tail quills (giving any and all ceratopsians quills has been a paleoart meme since the discovery of *Psittacosaurus*’s quills) for the same reason as mentioned above regarding *Heterodontosaurus*.
 
 ![gigantoraptor](/assets/images/posts/gigantoraptor.jpg)
 
-Above: a naked take on *Gigantoraptor*, a huge oviraptorosaur from Late Cretaceous China.  It was one of the largest oviraptorosaurs (along with possibly Beibeilong), weighing between 2 and 3.6 tonnes full-grown.  That puts it well over the *Yutyrannus* threshold (1.4 tonnes), so we should expect it to be at least partly naked, and possibly completely naked.  That is one big plucked chicken.  I gave it little filaments on the head, shoulders, and tip of the tail to improve heat dissipation like an elephant.  Drawing a naked dino feels kind of weird, like it’s the 1970s or something.
+Above: a naked take on *Gigantoraptor*, a huge oviraptorosaur from Late Cretaceous China.  It was one of the largest oviraptorosaurs (along with possibly *Beibeilong*), weighing between 2 and 3.6 tonnes full-grown.  That puts it well over the *Yutyrannus* threshold (1.4 tonnes), so we should expect it to be at least partly naked, and possibly completely naked.  That is one big plucked chicken.  I gave it little filaments on the head, shoulders, and tip of the tail to improve heat dissipation like an elephant.  Drawing a naked dino feels kind of weird, like it’s the 1970s or something.
 
-Image credits:
+### Image credits:
 [Page image](https://www.deviantart.com/eurwentala/art/Croc-or-birb-825068004)
 [Fatbird T.rex](https://imgur.com/gallery/rmad4)
 [Doswellia](https://www.deviantart.com/eurwentala/art/The-Armadillo-heron-798808507)
