--- a/_posts/2019-12-29-artdump.markdown
+++ b/_posts/2019-12-29-artdump.markdown
@@ -60,7 +60,7 @@ Back to the realm of the living, we have an eastern garden lizard (*Calotes vers
 #### *Velafrons*
 ![art-11](/assets/images/posts/art-11.jpg)
 
-*Velafrons* was a hadrosaur from Late Cretaceous Mexico.  Like deer, I made the juveniles more spotty and leggy than the adult.  The young also lack crests, since the crest is a sexual display feature that isn't needed until maturity.  The front legs are hooves, based on the new finding of a mummified Edmontosaurus forelimb that preserves a hoof structure.  I used a picture of moose as reference.
+*Velafrons* was a hadrosaur from Late Cretaceous Mexico.  Like deer, I made the juveniles more spotty and leggy than the adult.  The young also lack crests, since the crest is a sexual display feature that isn't needed until maturity.  The front legs are hooves, based on the new finding of a mummified *Edmontosaurus* forelimb that preserves a hoof structure.  I used a picture of moose as reference.
 
 #### Hoatzin
 ![art-12](/assets/images/posts/art-12.png)
