added link to previous

--- a/_posts/2021-04-21-feeder2.md
+++ b/_posts/2021-04-21-feeder2.md
@@ -12,6 +12,8 @@ hidden: true
 
 It's been awhile since my last update on the status of the coin-operated crow feeder.  Life's been pretty busy, but that's no excuse--there are crows to feed!
 
+(Find Part 1 [here](https://obscuredinosaurfacts.com/blog/post/2020/12/23/feeder.html).)
+
 ### Gauging the crows' preferences
 
 Last time, I stated that I would provide birdseed for a penny, mealworms for a nickel, cat food for a dime, and peanuts for a quarter, but my naturalist friend pointed out that I don't actually know the crows' preferences.  So, I set out samples of each on my balcony and observed to see who would come and eat what, in what order.
